--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ aux_links_new_tab: false
 
 # Sort order for navigation links
 # nav_sort: case_insensitive # default, equivalent to nil
-nav_sort: case_sensitive # Capital letters sorted before lowercase
+nav_sort: default # Capital letters sorted before lowercase
 
 # External navigation links
 nav_external_links:
